[package]
name = "ai-clipboard"
version = "0.1.0"
description = "AI Clipboard - macOS clipboard history"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
arboard = "3"
dirs = "5"
objc = "0.2"
core-graphics = "0.24"
png = "0.17"
